# riskengine

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: admin_endpoint.py  risk_endpoint.py
app/core/: auth.py  config.py
app/models/: database.py  risk_assessment.py
app/schemas/: risk_request.py  risk_response.py
app/scoring/: b2b_factors.py  engine.py  factors.py  legacy_scorecard.py
app/services/: dealer_metrics_refresh.py  dscr_calculator.py  event_publisher.py  quarterly_segment_refresh.py
calibration-ui/: CalibrationUI_preview.jsx  flow.html  index.html
database/: performance_indexes.sql  schema.sql
docs/: 004_historical_data_model.py  LT_Risk_Engine_Specification_v1.2.docx  RISK-ENGINE-SPEC-FACT-CHECK.md  sample_request.json  sample_response.json  spec_to_copy.docx
docs/LT_Risk_Engine_docx/: LT_Risk_Engine_Business_Reference_Guide_v1.2.docx  LT_Risk_Engine_Codebase_Reference_Guide_v1.2.docx  LT_Risk_Engine_Data_Model_Reference_v1.2.docx  LT_Risk_Engine_Deployment_Guide_v1.2.docx
docs/client requirement/vincent doc ocr/: FRAUD_INVESTIGATION_REPORT.md  PAYSLIP_ANALYSIS_SUMMARY.md  PAYSLIP_FRAUD_DETECTION_GUIDE.md
docs/client requirement/vincent doc riskengine/: B2C-CreditRules.xlsx  RISK-ENGINE-SPEC.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_calibration_tables.py  003_seed_v1_2_config.py  004_monitoring_and_defaults.py  005_seed_woe_params.py
tests/: test_dscr.py  test_engine.py  test_factors.py
(+5 files in other folders)
